Saved projects; Scrollbar; Style fixes.

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -65,25 +65,25 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 0;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: rgba(255, 255, 255, 0);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: rgba(255, 255, 255, 0);
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: rgba(255, 255, 255, 0);
 }
 
 * {
-  scrollbar-color: rgb(var(--primary)) rgb(var(--secondary));
+  scrollbar-color: rgba(255, 255, 255, 0) rgba(255, 255, 255, 0);
   scrollbar-width: none;
   scroll-margin: 0;
   scroll-padding: 0;
